--- a/client_side/src/styles/navbar.css
+++ b/client_side/src/styles/navbar.css
@@ -1,66 +1,53 @@
-.navbar{
-    top: 0;
-    position :relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    z-index: 16px;
-    box-shadow: none;
+.sidenav {
+  height: 100%;
+  width: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 70px;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
 
-.navbar-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100px;
-    background-color: #fff;
-    box-shadow: 0 2px 50px 0 rgba(0, 0, 0, 0.15);
-    position: relative;
+.sidenavitems {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block
 }
 
-/* Logo Div */
+.sidenavitems .courses:hover{
+     transition:  0.25s ease-in-out;
+     border-radius: 6px;
+     color:white;
+     cursor: pointer;
+  }
 
-.navbar-logo {
-    position: absolute;
-    left: 0;
-    z-index: 16;
-    display: flex;
-    align-items: center;
-    color: #000000;
-    margin-left: 3rem;
-}
+.sidenavitems .projets:hover{
+     transition:  0.25s ease-in-out;
+     border-radius: 6px;
+     color:white;
+     cursor: pointer;
+  }
 
+.sidenavitems .dashboard:hover{
+     transition:  0.25s ease-in-out;
+     border-radius: 6px;
+     color:white;
+     cursor: pointer;
+  }
 
-/* Logo Main Wrapper */
-
-.navbar-camsLogo{
-    padding: 10px 12px 06px 12px;
-    border-radius: 10px;
-    border: 2.5px solid var(--cams-grey);
-} 
-
-/* Logo */
-
-.navbar-camsLogo img {
-    height: 30px;
-} 
-
-/* Logo Hover Effect */
-
-.navbar-camsLogo:hover {
-    padding: 10px 12px 06px 12px;
-    border-radius: 10px;
-    transition:  0.1s ease-in-out;
-    /*color: var(--primary-color);*/
-    cursor: pointer;
-    border: 2.5px solid var(--primary-color);
+.main {
+  margin-top : 25px;
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
 }
 
 .navbar-buttons{
     display: flex;
-    align-items: center;
+    align-items: right;
     justify-content: center;
   }
 
@@ -143,100 +130,12 @@
   .navbar-sign-out-btn .soSvg path {
     fill: var(--cams-dark-grey);
 }
-  
+
 
   /* Sing Out Button Hover */
-  
+
   .navbar-sign-out-btn:hover{
      transition:  0.1s ease;
      cursor: pointer;
      background-color:  rgba(203, 203, 203, 0.25);
-  }
-
-  .navbar-links {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 60px;
-  }
-
-  /* Admin Courses Icon */
-
-.navbar-links  .courses{
-    object-fit: contain;
-    font-family: Poppins;
-    font-size: 20px;
-    font-weight: 400;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #bfbfbf;
-    border-radius: 6px;
-    margin-right: 50px;
-  }
-  
-  /* Admin Courses Icon Hover */
-  
-.navbar-links  .courses:hover{
-     transition:  0.25s ease-in-out;
-     border-radius: 6px;
-     /*color: var(--primary-color);*/
-     color: var(--cams-blue);
-     cursor: pointer;
-  }
-
-  /* Admin Projects Icon */
-
-.navbar-links  .projects{
-    object-fit: contain;
-    font-family: Poppins;
-    font-size: 20px;
-    font-weight: 400;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #bfbfbf;
-    border-radius: 6px;
-    margin-right: 50px;
-  }
-  
-  /* Admin Projects Icon Hover */
-  
-.navbar-links .projects:hover{
-     transition:  0.25s ease-in-out;
-     border-radius: 6px;
-     /*color: var(--primary-color);*/
-     color: var(--cams-blue);
-     cursor: pointer;
-  }
-
-    /* Admin Dashboard Icon */
-
-.navbar-links .dashboard{
-    object-fit: contain;
-    font-family: Poppins;
-    font-size: 20px;
-    font-weight: 400;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #bfbfbf;
-    border-radius: 6px;
-  }
-  
-  /* Admin Dashboard Icon Hover */
-  
-  .navbar-links .dashboard:hover{
-     transition:  0.25s ease-in-out;
-     border-radius: 6px;
-     /*color: var(--primary-color);*/
-     color: var(--cams-blue);
-     cursor: pointer;
   }
