--- a/client_side/src/styles/ProjectPreview.css
+++ b/client_side/src/styles/ProjectPreview.css
@@ -20,9 +20,11 @@
   flex-direction: column;
   background-color: white;
   border-radius: 15px;
-  width: 850px;
-  height: 650px;
-  border: 2px solid var(--cams-blue);
+  width: 80%;
+  width: 850px; 
+  height: 600px; 
+  border: 2px solid black;
+
 }
 
 .popup-content {
@@ -72,7 +74,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    height: 12px;
+    height: 14px;
     width: 12px;
     padding: 7.5px 05px 4.75px 7px;
     border-radius: 50px;
@@ -98,14 +100,14 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    margin-top: 20px;
+    /* margin-top: 10px; */
     border-radius: 10px;
     background-color: #0099eb1d;
     overflow-y: auto;
   }
 
   .popup-content-header{
-    color: var(--cams-dark);
+    color:black;
     font-family: Poppins;
     font-size: 21px;
     font-weight: 500;
@@ -124,7 +126,7 @@
   } 
 
   .popup-content-desc{
-    color: var(--cams-dark-grey);
+    color: black;
     font-family: Poppins;
     font-size: 16px;
     font-weight: 300;
@@ -150,7 +152,7 @@
   }
 
   .attachments{
-    color: var(--cams-dark-grey);
+    color: black;
     font-family: Poppins;
     font-size: 21px;
     font-weight: 400;
